Correct alignment issue on locations container

--- a/resources/CSS/styles.css
+++ b/resources/CSS/styles.css
@@ -103,7 +103,6 @@ nav a {
 
 #mission.content-section {
   display: flex;
-  align-items: center;
   height: 700px;
   background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg");
   background-position: center center;
@@ -137,6 +136,7 @@ nav a {
 }
 
 #locations .content-grid {
+  width: 100%;
   margin: 0 1em 2em 1em;
 }
 
